# backend-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  mypy.ini  pylama.ini  pyproject.toml  tox.ini
.chglog/: config.yml
.github/workflows/: lint.yml  pypi.yml  test.yml
docs/: config.md  index.md  quickstart.md  staticbackend.md
staticbackend/: __init__.py  base.py  config.py  database.py  errors.py  forms.py  staticbackend.py  storage.py  test_config.py  user.py  version.py
tests/: test_config.py  test_staticbackend.py
